--- a/숙제.html
+++ b/숙제.html
@@ -5,6 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>웹프로그래밍 과제 제출용</title>
+    <style>
+        *{font-family: "신명신명조", Arial, Helvetica, sans-serif;}
+        Header h1  {display: inline;}
+        header img {height: 100px;}
+        ul{list-style-type: none;}
+        a{text-decoration: navy;}
+        nav ul {
+            text-align: center; border-top:2px  gray;
+            border-bottom: 2px gray #ffa500; padding: 10px 15px 20px;
+        }
+        nav ul li {
+            display: inline;
+            padding: 20px;
+            letter-spacing: 7px;
+        }
+        nav ul li {
+            background-color: #3cd371;
+        }
+        nav ul li {
+            color: greenyellow;
+        }
+    </style>
+    <style>
+        h1{color: violet; background-color: teal; text-align: center;}
+        #main{font-size;: 20px}
+        li:hover{background-color: rgb(255,165,0);}
+        ul {list-style: none;}
+        li{display: inline; margin: 10px 20px 30px 40px;}
+        .subject>p {text-align: center; color: tomato;}
+    </style>
 <header><h1></h1></header>
 </head>
 <header>
