안녕하십니까 교수님 수정파일 업로드하였습니다. 감사합니다.

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 	<!-- .calli01>img[src="../images/photo$.jpg"]*6 -->
 	<div class="junho img" >
 	  <div class="w3-row">
-		<img class="w3-col s3 w3-border w3-margin" src="./images/불고기피자.jpg" alt="불고기피자" />
+		<img class="w3-col s3 w3-border w3-margin" src="./images/불고기피자.JPG" alt="불고기피자" />
 		<img class="w3-col s3 w3-border w3-margin"  src="./images/전포동 버섯리조또.jpg" alt="버섯리조또" />
 		<img class="w3-col s3 w3-border w3-margin"  src="./images/전포동 이준호.jpg" alt="전포동 이준호" />
 	  </div>
